# Triangles

./: CMakeLists.txt
include/: utils.hpp  vectors.hpp
source/: main.cpp  utils.cpp  vectors.tpp
tests/: vectors_test.cpp
